--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,7 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	adafruit/Adafruit SSD1306@^2.5.13
+	adafruit/Adafruit GFX Library@^1.11.11
+	adafruit/Adafruit BusIO@^1.17.0
