--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.13
 	adafruit/Adafruit GFX Library@^1.11.11
 	adafruit/Adafruit BusIO@^1.17.0
+	bblanchon/ArduinoJson@^7.3.0
+	Links2004/WebSockets @ ^2.3.5
